--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,8 @@
-{
-  "name": "nimix3/venus",
-  "license": "MIT",
-  "version": "1.0.0",
-  "type": "Framework",
-  "description": "Secure, lightweight & rapid web development framework",
-  "keywords": ["framework", "php-framework", "php", "cms-framework", "venus", "venusframework", "secure", "high-performance", "high-security", "high-speed", "rapid-development", "rapid-application-development", "lightweight", "php-component"],
-  "homepage": "https://github.com/nimix3/Venus",
-  "authors": [
-    {
-      "name": "Nima Akhlaghi",
-      "email": "info@nimix3.com",
-      "role": "CEO"
-    }
-  ],
- "repositories": [
+"repositories": [
     {
         "type":"package",
         "package": {
-          "name": "nimix3/venus",
+          "name": "nimix3/Venus",
           "version":"master",
           "source": {
               "url": "https://github.com/nimix3/Venus.git",
@@ -28,6 +13,5 @@
     }
 ],
 "require": {
-    "nimix3/venus": "master"
-}
+    "nimix3/Venus": "master"
 }
