--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,12 @@
     }
 ],
 "minimum-stability":"dev",
+"autoload": {
+  "psr-4": {
+    "Core\\": "Venus/library/core",
+    "ThirdParty\\": "Venus/library/t3rdparty",
+  }
+},
 "require": {
     "nimix3/Venus": "master"
 }
